--- a/css/main.css
+++ b/css/main.css
@@ -961,11 +961,7 @@ body {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-<<<<<<< HEAD
-  background: #3e29ff;
-=======
-  background: #ff0069;
->>>>>>> origin/master
+  background: #c753d2;
 }
 .sidebar-nav {
   margin: 0 0 20px;
