--- a/css/main.css
+++ b/css/main.css
@@ -961,7 +961,7 @@ body {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #ff74ff;
+  background: #e54116;
 }
 .sidebar-nav {
   margin: 0 0 20px;
