--- a/css/main.css
+++ b/css/main.css
@@ -961,7 +961,7 @@ body {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #ffff4a;
+  background: #ffbf4f;
 }
 .sidebar-nav {
   margin: 0 0 20px;
